// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`2_meaColor 1`] = `
{
  "annotation": {},
  "chartType": "funnel",
  "config": {
    "funnel": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
      },
      "label": {
        "enable": true,
        "showValue": true,
        "showValuePercent": false,
        "wrap": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelFontColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "tooltip": {
        "enable": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "funnel": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
        },
        "label": {
          "enable": true,
          "showValue": true,
          "showValuePercent": false,
          "wrap": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelFontColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "tooltip": {
          "enable": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 20,
      "__Dim_Detail__": "A-2019",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019",
        "profit": 10,
        "profit2": 10,
        "sales": 20,
        "type": "A",
      },
      "date": "2019",
      "profit": 10,
      "profit2": 10,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 20,
      "__Dim_Detail__": "A-2019",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2019",
        "profit": 10,
        "profit2": 10,
        "sales": 20,
        "type": "A",
      },
      "date": "2019",
      "profit2": 10,
      "sales": 20,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 60,
      "__Dim_Detail__": "B-2019",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019",
        "profit": 30,
        "profit2": 10,
        "sales": 60,
        "type": "B",
      },
      "date": "2019",
      "profit": 30,
      "profit2": 10,
      "type": "B",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 60,
      "__Dim_Detail__": "B-2019",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019",
        "profit": 30,
        "profit2": 10,
        "sales": 60,
        "type": "B",
      },
      "date": "2019",
      "profit2": 10,
      "sales": 60,
      "type": "B",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 60,
      "__Dim_Detail__": "C-2019",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019",
        "profit": 30,
        "profit2": 10,
        "sales": 60,
        "type": "C",
      },
      "date": "2019",
      "profit": 30,
      "profit2": 10,
      "type": "C",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 60,
      "__Dim_Detail__": "C-2019",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019",
        "profit": 30,
        "profit2": 10,
        "sales": 60,
        "type": "C",
      },
      "date": "2019",
      "profit2": 10,
      "sales": 60,
      "type": "C",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 100,
      "__Dim_Detail__": "D-2019",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2019",
        "profit": 50,
        "profit2": 10,
        "sales": 100,
        "type": "D",
      },
      "date": "2019",
      "profit": 50,
      "profit2": 10,
      "type": "D",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 100,
      "__Dim_Detail__": "D-2019",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019",
        "profit": 50,
        "profit2": 10,
        "sales": 100,
        "type": "D",
      },
      "date": "2019",
      "profit2": 10,
      "sales": 100,
      "type": "D",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 80,
      "__Dim_Detail__": "E-2019",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2019",
        "profit": 40,
        "profit2": 10,
        "sales": 80,
        "type": "E",
      },
      "date": "2019",
      "profit": 40,
      "profit2": 10,
      "type": "E",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 80,
      "__Dim_Detail__": "E-2019",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 80,
      "__OriginalData__": {
        "date": "2019",
        "profit": 40,
        "profit2": 10,
        "sales": 80,
        "type": "E",
      },
      "date": "2019",
      "profit2": 10,
      "sales": 80,
      "type": "E",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 210,
      "__Dim_Detail__": "A-2020",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2020",
        "profit": 100,
        "profit2": 210,
        "sales": 210,
        "type": "A",
      },
      "date": "2020",
      "profit": 100,
      "profit2": 210,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 210,
      "__Dim_Detail__": "A-2020",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 210,
      "__OriginalData__": {
        "date": "2020",
        "profit": 100,
        "profit2": 210,
        "sales": 210,
        "type": "A",
      },
      "date": "2020",
      "profit2": 210,
      "sales": 210,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 610,
      "__Dim_Detail__": "B-2020",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 300,
      "__OriginalData__": {
        "date": "2020",
        "profit": 300,
        "profit2": 120,
        "sales": 610,
        "type": "B",
      },
      "date": "2020",
      "profit": 300,
      "profit2": 120,
      "type": "B",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 610,
      "__Dim_Detail__": "B-2020",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 610,
      "__OriginalData__": {
        "date": "2020",
        "profit": 300,
        "profit2": 120,
        "sales": 610,
        "type": "B",
      },
      "date": "2020",
      "profit2": 120,
      "sales": 610,
      "type": "B",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 610,
      "__Dim_Detail__": "C-2020",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 300,
      "__OriginalData__": {
        "date": "2020",
        "profit": 300,
        "profit2": 120,
        "sales": 610,
        "type": "C",
      },
      "date": "2020",
      "profit": 300,
      "profit2": 120,
      "type": "C",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 610,
      "__Dim_Detail__": "C-2020",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 610,
      "__OriginalData__": {
        "date": "2020",
        "profit": 300,
        "profit2": 120,
        "sales": 610,
        "type": "C",
      },
      "date": "2020",
      "profit2": 120,
      "sales": 610,
      "type": "C",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 100,
      "__Dim_Detail__": "D-2020",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 500,
      "__OriginalData__": {
        "date": "2020",
        "profit": 500,
        "profit2": 210,
        "sales": 100,
        "type": "D",
      },
      "date": "2020",
      "profit": 500,
      "profit2": 210,
      "type": "D",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 100,
      "__Dim_Detail__": "D-2020",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2020",
        "profit": 500,
        "profit2": 210,
        "sales": 100,
        "type": "D",
      },
      "date": "2020",
      "profit2": 210,
      "sales": 100,
      "type": "D",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 110,
      "__Dim_Detail__": "E-2020",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 400,
      "__OriginalData__": {
        "date": "2020",
        "profit": 400,
        "profit2": 210,
        "sales": 110,
        "type": "E",
      },
      "date": "2020",
      "profit": 400,
      "profit2": 210,
      "type": "E",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 110,
      "__Dim_Detail__": "E-2020",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 110,
      "__OriginalData__": {
        "date": "2020",
        "profit": 400,
        "profit2": 210,
        "sales": 110,
        "type": "E",
      },
      "date": "2020",
      "profit2": 210,
      "sales": 110,
      "type": "E",
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "profit": "利润",
          "sales": "销售额",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaValue__",
        "statistics": {
          "colorMax": 610,
          "colorMin": 20,
          "count": 20,
          "max": 610,
          "min": 10,
          "sum": 3720,
        },
      },
      "id": "funnel",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {},
        "colorItems": [],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "类型",
      "encoding": "detail",
      "id": "type",
    },
    {
      "alias": "日期",
      "encoding": "detail",
      "id": "date",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "color": [
      "sales",
    ],
    "detail": [
      "type",
      "date",
    ],
    "label": [],
    "size": [
      "profit",
    ],
    "tooltip": [
      "type",
      "date",
    ],
  },
  "locale": "zh-CN",
  "measures": [
    {
      "children": [
        {
          "alias": "利润",
          "encoding": "size",
          "id": "profit",
          "parentId": "1",
        },
        {
          "alias": "销售额",
          "encoding": "color",
          "id": "sales",
          "parentId": "1",
        },
      ],
      "id": "1",
    },
  ],
}
`;

exports[`2_meaColor 2`] = `
{
  "animation": true,
  "background": "transparent",
  "categoryField": "__Dim_ColorId__",
  "color": {
    "domain": [
      {
        "dataId": "funnel",
        "fields": [
          "__Dim_Color__",
        ],
      },
    ],
    "range": [
      "#C2CEFF",
      "#5766EC",
    ],
    "type": "linear",
  },
  "data": {
    "fields": {
      "__Dim_Angle__": {
        "sortIndex": 0,
      },
      "__Dim_ColorId__": {
        "sortIndex": 0,
      },
      "__Dim_X__": {
        "sortIndex": 0,
      },
    },
    "id": "funnel",
    "values": [
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 20,
        "__Dim_Detail__": "A-2019",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019",
          "profit": 10,
          "profit2": 10,
          "sales": 20,
          "type": "A",
        },
        "date": "2019",
        "profit": 10,
        "profit2": 10,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 20,
        "__Dim_Detail__": "A-2019",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2019",
          "profit": 10,
          "profit2": 10,
          "sales": 20,
          "type": "A",
        },
        "date": "2019",
        "profit2": 10,
        "sales": 20,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 60,
        "__Dim_Detail__": "B-2019",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019",
          "profit": 30,
          "profit2": 10,
          "sales": 60,
          "type": "B",
        },
        "date": "2019",
        "profit": 30,
        "profit2": 10,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 60,
        "__Dim_Detail__": "B-2019",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019",
          "profit": 30,
          "profit2": 10,
          "sales": 60,
          "type": "B",
        },
        "date": "2019",
        "profit2": 10,
        "sales": 60,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 60,
        "__Dim_Detail__": "C-2019",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019",
          "profit": 30,
          "profit2": 10,
          "sales": 60,
          "type": "C",
        },
        "date": "2019",
        "profit": 30,
        "profit2": 10,
        "type": "C",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 60,
        "__Dim_Detail__": "C-2019",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019",
          "profit": 30,
          "profit2": 10,
          "sales": 60,
          "type": "C",
        },
        "date": "2019",
        "profit2": 10,
        "sales": 60,
        "type": "C",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 100,
        "__Dim_Detail__": "D-2019",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2019",
          "profit": 50,
          "profit2": 10,
          "sales": 100,
          "type": "D",
        },
        "date": "2019",
        "profit": 50,
        "profit2": 10,
        "type": "D",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 100,
        "__Dim_Detail__": "D-2019",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019",
          "profit": 50,
          "profit2": 10,
          "sales": 100,
          "type": "D",
        },
        "date": "2019",
        "profit2": 10,
        "sales": 100,
        "type": "D",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 80,
        "__Dim_Detail__": "E-2019",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2019",
          "profit": 40,
          "profit2": 10,
          "sales": 80,
          "type": "E",
        },
        "date": "2019",
        "profit": 40,
        "profit2": 10,
        "type": "E",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 80,
        "__Dim_Detail__": "E-2019",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 80,
        "__OriginalData__": {
          "date": "2019",
          "profit": 40,
          "profit2": 10,
          "sales": 80,
          "type": "E",
        },
        "date": "2019",
        "profit2": 10,
        "sales": 80,
        "type": "E",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 210,
        "__Dim_Detail__": "A-2020",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2020",
          "profit": 100,
          "profit2": 210,
          "sales": 210,
          "type": "A",
        },
        "date": "2020",
        "profit": 100,
        "profit2": 210,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 210,
        "__Dim_Detail__": "A-2020",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 210,
        "__OriginalData__": {
          "date": "2020",
          "profit": 100,
          "profit2": 210,
          "sales": 210,
          "type": "A",
        },
        "date": "2020",
        "profit2": 210,
        "sales": 210,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 610,
        "__Dim_Detail__": "B-2020",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 300,
        "__OriginalData__": {
          "date": "2020",
          "profit": 300,
          "profit2": 120,
          "sales": 610,
          "type": "B",
        },
        "date": "2020",
        "profit": 300,
        "profit2": 120,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 610,
        "__Dim_Detail__": "B-2020",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 610,
        "__OriginalData__": {
          "date": "2020",
          "profit": 300,
          "profit2": 120,
          "sales": 610,
          "type": "B",
        },
        "date": "2020",
        "profit2": 120,
        "sales": 610,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 610,
        "__Dim_Detail__": "C-2020",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 300,
        "__OriginalData__": {
          "date": "2020",
          "profit": 300,
          "profit2": 120,
          "sales": 610,
          "type": "C",
        },
        "date": "2020",
        "profit": 300,
        "profit2": 120,
        "type": "C",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 610,
        "__Dim_Detail__": "C-2020",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 610,
        "__OriginalData__": {
          "date": "2020",
          "profit": 300,
          "profit2": 120,
          "sales": 610,
          "type": "C",
        },
        "date": "2020",
        "profit2": 120,
        "sales": 610,
        "type": "C",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 100,
        "__Dim_Detail__": "D-2020",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 500,
        "__OriginalData__": {
          "date": "2020",
          "profit": 500,
          "profit2": 210,
          "sales": 100,
          "type": "D",
        },
        "date": "2020",
        "profit": 500,
        "profit2": 210,
        "type": "D",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 100,
        "__Dim_Detail__": "D-2020",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2020",
          "profit": 500,
          "profit2": 210,
          "sales": 100,
          "type": "D",
        },
        "date": "2020",
        "profit2": 210,
        "sales": 100,
        "type": "D",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 110,
        "__Dim_Detail__": "E-2020",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 400,
        "__OriginalData__": {
          "date": "2020",
          "profit": 400,
          "profit2": 210,
          "sales": 110,
          "type": "E",
        },
        "date": "2020",
        "profit": 400,
        "profit2": 210,
        "type": "E",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 110,
        "__Dim_Detail__": "E-2020",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 110,
        "__OriginalData__": {
          "date": "2020",
          "profit": 400,
          "profit2": 210,
          "sales": 110,
          "type": "E",
        },
        "date": "2020",
        "profit2": 210,
        "sales": 110,
        "type": "E",
      },
    ],
  },
  "funnel": {
    "state": {
      "hover": {
        "fillOpacity": 0.6,
      },
    },
    "style": {
      "cornerRadius": 4,
      "fill": {
        "field": "__Dim_Color__",
        "scale": "color",
      },
    },
  },
  "isTransform": true,
  "label": {
    "formatMethod": [Function],
    "visible": true,
  },
  "legends": {
    "endText": {
      "style": {
        "fill": "#646A73",
        "fontSize": 12,
        "fontWeight": 400,
      },
      "visible": true,
    },
    "field": "__Dim_Color__",
    "maxWidth": "30%",
    "orient": "right",
    "padding": 0,
    "position": "start",
    "startText": {
      "style": {
        "fill": "#646A73",
        "fontSize": 12,
        "fontWeight": 400,
      },
      "visible": true,
    },
    "type": "color",
    "visible": true,
  },
  "maxSize": "75%",
  "minSize": "10%",
  "padding": 0,
  "region": [
    {
      "clip": true,
    },
  ],
  "shape": "rect",
  "tooltip": {
    "dimension": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": false,
      },
    },
    "visible": true,
  },
  "transformLabel": {
    "visible": true,
  },
  "type": "funnel",
  "valueField": "__MeaValue__",
}
`;

exports[`2_meaColor 3`] = `
{
  "advancedPipeline": [
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "colorIdMap": {},
  "colorItems": [],
  "hasTheme": true,
  "specPipeline": [
    [Function],
  ],
  "themeMapKeys": [
    "light",
    "dark",
  ],
}
`;
